<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">frame</string>
    <string name="title_auth">医生认证</string>
    <string name="title_select_hospital">选择医院</string>
    <string name="title_add_hospital">添加医院</string>
    <string name="title_select_depart">选择科室</string>
    <string name="title_setting">设置</string>
    <string name="title_about">关于会珍</string>
    <string name="title_about2">了解会珍</string>
    <string name="title_personal_info">个人信息</string>
    <string name="title_personal_center">个人中心</string>
    <string name="title_total_income">累计收入</string>
    <string name="title_month_income">本月收入</string>
    <string name="title_withdraw_detail">提现详情</string>
    <string name="title_income_detail">收入详情</string>
    <string name="title_message">消息</string>
    <string name="title_camera_scan">扫一扫</string>
    <string name="title_add_check">添加服务项目</string>
    <string name="title_add_transfer">发起转诊(%d)</string>
    <string name="title_add_service">发起服务(%d)</string>
    <string name="title_transfer_detail">预约转诊详情</string>
    <string name="title_received_transfer_detail">已接诊详情</string>
    <string name="title_receiving_transfer_apply">预约转诊申请</string>
    <string name="title_receiving_transfer_detail">预约转诊详情</string>
    <string name="title_transfer_apply">转诊申请</string>
    <string name="title_edit_transfer">变更接诊信息</string>
    <string name="title_transfer_again">再次转诊</string>
    <string name="title_remote_detail">远程会诊详情</string>
    <string name="title_cooperate_hospital">合作医院</string>
    <string name="title_hospital_product">服务项目(%s)</string>
    <string name="title_doctor_info">医生详情</string>
    <string name="title_my_qr_code">我的二维码</string>
    <string name="title_edit_patient_label">编辑居民标签</string>
    <string name="title_recent_patient">最近添加</string>
    <string name="title_health_manage">健康管理</string>
    <string name="title_past_history">既往史</string>
    <string name="title_add_diagnosis">填写诊断意见</string>
    <string name="title_service_detail">服务详情</string>
    <string name="title_add_remote_num">已发起会诊(%d)</string>
    <string name="title_add_remote">已发起会诊</string>
    <string name="title_consultation_time">选择会诊时间</string>
    <string name="title_add_depart">添加医院-科室</string>
    <string name="title_instance">证书照片实例</string>
    <string name="title_header_image">免冠近照</string>
    <string name="txt_app_name">会珍</string>
    <string name="txt_notify">通知</string>
    <string name="txt_hint">提示</string>
    <string name="txt_close">关闭</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_call">呼叫</string>
    <string name="txt_sure">确定</string>
    <string name="txt_sure_add">确认添加</string>
    <string name="txt_sure_delete">确认删除</string>
    <string name="txt_save">保存</string>
    <string name="txt_not_save">不保存</string>
    <string name="txt_open">去开启</string>
    <string name="txt_exit">退出</string>
    <string name="txt_exit_app">退出应用</string>
    <string name="txt_clear">清除</string>
    <string name="txt_add">添加</string>
    <string name="txt_refuse">拒绝</string>
    <string name="txt_submit">提交</string>
    <string name="txt_agree">同意</string>
    <string name="txt_disagree">不同意</string>
    <string name="txt_edit">编辑</string>
    <string name="txt_update">更换</string>
    <string name="txt_delete_all">全部删除</string>
    <string name="txt_next">下一步</string>
    <string name="txt_last">上一步</string>
    <string name="txt_pack_up">收起</string>
    <string name="txt_pack_down">展开更多</string>
    <string name="txt_look_more">查看更多</string>
    <string name="txt_click_look_more">点击查看更多</string>
    <string name="txt_loading_again">重新加载</string>
    <string name="txt_none_network">抱歉，好像网络出问题了</string>
    <string name="txt_none_message">暂无消息</string>
    <string name="txt_none_patient">暂无居民</string>
    <string name="txt_none_doctor_friend">暂无医生好友</string>
    <string name="txt_search_none_patient">没找到该居民</string>
    <string name="txt_search_none_doctor">没找到该医生好友</string>
    <string name="txt_none_recording">暂无记录</string>
    <string name="txt_none_medical_recording">暂无诊疗记录</string>
    <string name="txt_none_service">暂无服务项</string>
    <string name="txt_none_recently_used_service">暂无使用过的服务</string>
    <string name="txt_none_service_refresh">暂无服务，点击刷新试试</string>
    <string name="txt_none_upgrade">功能升级</string>
    <string name="txt_none_doctor">无合作医生</string>
    <string name="txt_none_hospital_by_reserve">暂无合作医院\n无法为居民预约服务</string>
    <string name="txt_none_hospital_by_reserve_transfer">暂无可接诊的合作医生\n无法为居民预约转诊</string>
    <string name="txt_none_permission_by_reserve_remote">暂无权限发起远程会诊</string>
    <string name="txt_camera">拍照</string>
    <string name="txt_photo">从手机相册选择</string>
    <string name="txt_contact">联系我们</string>
    <string name="txt_contact_hotline">您将要拨打%s：\n%s</string>
    <string name="txt_contact_service">医助热线</string>
    <string name="txt_contact_service_phone">4000280024</string>
    <string name="txt_contact_patient_phone">居民电话</string>
    <string name="txt_contact_doctor_phone">医生电话</string>
    <string name="txt_calc_num">%d/500</string>
    <string name="txt_calc_num_five">0/500</string>
    <string name="txt_calc_num_thirty">%d/30</string>
    <string name="txt_calc_num_thirty_zero">0/30</string>
    <string name="txt_yes">是</string>
    <string name="txt_no">否</string>
    <string name="txt_notice">注意事项</string>
    <string name="txt_not_required">(非必填)</string>
    <string name="txt_num">&#160;&#160;(%d)</string>
    <string name="txt_doctor_phone">医生手机号</string>
    <string name="txt_detail">查看详情</string>
    <string name="txt_max_num">9999+</string>
    <string name="txt_middle_num">99+</string>
    <string name="txt_min_num">0</string>
    <string name="txt_plus">+%s</string>
    <string name="txt_space">%s&#160;&#160;</string>
    <string name="txt_space_two">%s&#160;&#160;%s</string>
    <string name="txt_joiner">%s&#160;-&#160;%s</string>
    <string name="txt_date_joiner">%s&#160;%s-%s</string>
    <string name="to_expand_hint">展开</string>
    <string name="to_shrink_hint">收起</string>
    <string name="txt_price">￥%s</string>
    <string name="txt_amount">x%s</string>
    <string name="txt_numbering">%d.&#160;%s:</string>
    <string name="txt_report_name_by_num">%s报告%d</string>
    <string name="txt_report_name">%s报告</string>
    <string name="txt_ease_login_expired">您的账号在其他设备登录，如果不是本人操作，请修改密码！</string>
    <string name="txt_login_expired">登录已过期，请重新登录</string>
    <string name="txt_open_notify_title">打开通知?</string>
    <string name="txt_open_notify_ignore">跳过</string>
    <string name="txt_open_notify_next">好的，打开通知</string>
    <string name="txt_open_notify_hint">我们可以在有人向您发起转诊，或者有其他重要活动时通知您。</string>
    <string name="txt_view_flipper_hint">感谢使用会珍，我们将竭诚为您服务~</string>
    <string name="txt_not_support_input">不支持输入</string>
    <string name="txt_year_and_month">%d年%d月</string>
    <string name="txt_appointed">已被预约</string>
    <string name="txt_optional">可选%s小时</string>
    <string name="txt_selected">已选</string>
    <string name="txt_clear_selected">清除已选</string>
    <string name="txt_verify_time">确认时间</string>
    <string name="txt_selected_hours">已选&#160;%s&#160;小时</string>
    <string name="txt_one_of_two">(二选一)</string>
    <string name="txt_message">消息</string>
    <string name="txt_worker">工作室</string>
    <string name="txt_contacts">通讯录</string>
    <string name="txt_patient">居民</string>
    <string name="txt_doctor">医生</string>
    <string name="txt_patient_hint">请输入居民姓名</string>
    <string name="txt_doctor_hint">请输入医生好友姓名</string>
    <string name="txt_message_status">全部已读</string>
    <string name="txt_my_patient">我的居民</string>
    <string name="txt_my_consulting_room">我的诊疗室</string>
    <string name="txt_initiate_check">发起服务</string>
    <string name="txt_initiate_transfer">发起转诊</string>
    <string name="txt_initiate_remote">发起远程</string>
    <string name="txt_my_accepted_transfer">已接收转诊</string>
    <string name="txt_menu_patient">居民添加我</string>
    <string name="txt_menu_doctor">医生添加我</string>
    <string name="txt_health_manager">居民健康管理</string>
    <string name="txt_made_service">定制服务包</string>
    <string name="txt_health_service">居民健康服务</string>
    <string name="txt_scan_hint">会珍医生版扫一扫，添加我</string>
    <string name="txt_wechat_scan_hint">居民微信扫一扫，添加我</string>
    <string name="txt_camera_hint">将二维码放入框中，即可自动扫描</string>
    <string name="txt_camera_error">无法识别此二维码</string>
    <string name="txt_camera_patient_error">请扫描&#160;【会珍】&#160;公众号中的居民二维码</string>
    <string name="txt_camera_qr">二维码</string>
    <string name="txt_camera_qr_again">重新扫描</string>
    <string name="txt_splash_time_hint">跳过(%ds)</string>
    <string name="txt_login_wechat">微信一键登录</string>
    <string name="txt_login_options_phone">手机号登录/注册</string>
    <string name="txt_login_phone">登录/注册</string>
    <string name="txt_login_protocol">登录即代表同意会珍用户协议和隐私协议</string>
    <string name="txt_login_hint">未注册手机号登录后将自动注册</string>
    <string name="txt_login_account_hint">手机号</string>
    <string name="txt_input_phone_hint">请输入手机号码</string>
    <string name="txt_login_code_hint">短信验证码</string>
    <string name="txt_login_obtain_code">获取验证码</string>
    <string name="txt_login_time">%ds</string>
    <string name="txt_login_phone_error">手机号不能为空</string>
    <string name="txt_login_verify_code_error">请先获取验证码</string>
    <string name="txt_login">登录</string>
    <string name="txt_login_bind_phone">绑定手机号</string>
    <string name="txt_login_bind_phone_hint">根据国家法规对账号实名制的要求，进行下一步操作前，请绑定您的手机号。</string>
    <string name="txt_account_disable">账号禁用</string>
    <string name="txt_account_disable_hint">由于多名居民举报，您的账号被禁用</string>
    <string name="txt_wechat_install_error">您还未安装微信，请使用手机号登录/注册</string>
    <string name="txt_auth_base">基本信息</string>
    <string name="txt_auth_license">医生执照</string>
    <string name="txt_auth_result">认证结果</string>
    <string name="txt_upload_img">上传照片</string>
    <string name="txt_upload_img_hint">上传本人正面免冠近照</string>
    <string name="txt_name">姓名</string>
    <string name="txt_patient_name">居民姓名</string>
    <string name="txt_name_hint">请填写本人真实姓名</string>
    <string name="txt_age">年龄</string>
    <string name="txt_age_hint">请输入真实年龄</string>
    <string name="txt_sex">性别</string>
    <string name="txt_sex_male">男</string>
    <string name="txt_sex_female">女</string>
    <string name="txt_hospital">医院</string>
    <string name="txt_depart">科室</string>
    <string name="txt_title">职称</string>
    <string name="txt_introduction">简介</string>
    <string name="txt_introduction_hint">介绍一下你自己</string>
    <string name="txt_contact_type">联系方式</string>
    <string name="txt_select_hint">请选择</string>
    <string name="txt_search_hospital_hint">请输入医院名称搜索</string>
    <string name="txt_search_hospital">请输入医院名称</string>
    <string name="txt_none_hospital">没有找到您的医院</string>
    <string name="txt_select_hospital">请先选择医院</string>
    <string name="txt_add_hospital">添加医院</string>
    <string name="txt_title_chief_physician">主任医师</string>
    <string name="txt_title_deputy_chief_physician">副主任医师</string>
    <string name="txt_title_attending_physician">主治医师</string>
    <string name="txt_title_hospitalization__physician">住院医师</string>
    <string name="txt_upload_card">上传证件</string>
    <string name="txt_upload_card_hint">请上传&#160;医师执业证书信息页。\n请确保图片中医师照片、姓名、证书编号、执业医院、执业范围、变更信息等清晰可见。照片仅用于认证您的真实身份，不向用户展示。</string>
    <string name="txt_photo_instance">照片实例</string>
    <string name="txt_submit_review">提交认证</string>
    <string name="txt_submit_again">重新认证</string>
    <string name="txt_review">审核中</string>
    <string name="txt_review_hint">我们将尽快完成审核，请耐心等候</string>
    <string name="txt_review_failure">审核未通过</string>
    <string name="txt_signature_reset">重新签名</string>
    <string name="txt_signature_sure">确认签名</string>
    <string name="txt_signature_hint">请患者或家属签名，</string>
    <string name="txt_signature_hint1">字迹需清晰可读</string>
</resources>