<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="15dp"
    android:id="@+id/layout_root"
    android:background="@drawable/corner10_ffffff_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c5c8cc"
            android:textSize="@dimen/text_24"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/txt_signature_hint"
            android:rotation="90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c5c8cc"
            android:textSize="@dimen/text_24"
            android:gravity="center"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="100dp"
            android:text="@string/txt_signature_hint1"
            android:rotation="90" />

    </LinearLayout>

    <com.yht.frame.widgets.view.SignatureView
        android:id="@+id/signature"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/ic_delete_gray" />

    <RelativeLayout
        android:id="@+id/layout_button"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_marginStart="-30dp"
        android:layout_height="218dp">

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/text_16"
            android:layout_marginTop="30dp"
            android:background="@drawable/corner28_fd8134_bg"
            android:text="@string/txt_signature_reset"
            android:gravity="center"
            android:rotation="90" />

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/text_16"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/corner28_1491fc_bg"
            android:text="@string/txt_signature_sure"
            android:gravity="center"
            android:rotation="90" />

    </RelativeLayout>

</RelativeLayout>


