<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_00000000"
    android:layout_width="wrap_content">

    <LinearLayout
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:minHeight="190dp"
        android:layout_centerInParent="true"
        android:background="@mipmap/pic_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_simple_hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_ffffff"
            tools:text="@string/txt_hint"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/dialog_simple_hint_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:paddingLeft="37dp"
            android:paddingRight="37dp"
            android:text="测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试"
            android:textColor="@color/color_17242e"
            android:textSize="@dimen/text_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:minWidth="78dp"
            android:paddingRight="34dp"
            android:paddingLeft="34dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/corner15_1491fc_bg"
            android:gravity="center"
            android:visibility="gone"
            android:maxLines="1"
            android:layout_marginTop="25dp"
            android:text="@string/txt_open"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/text_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_simple_hint_cancel"
                android:layout_width="78dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:maxLines="1"
                android:background="@drawable/corner15_stroke1_9b9b9b"
                android:text="@string/txt_cancel"
                android:textColor="@color/color_9b9b9b"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/dialog_simple_hint_enter"
                android:layout_width="78dp"
                android:layout_height="30dp"
                android:layout_marginLeft="39dp"
                android:background="@drawable/corner15_1491fc_bg"
                android:gravity="center"
                android:maxLines="1"
                android:text="确定"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="@dimen/app_hei_line"
        android:background="@color/color_ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:src="@mipmap/ic_launcher_test"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />
</LinearLayout>

